# nh-cheni

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DESIGN.md  DIAGNOSE.md  LICENSE  README.md  RELEASING.md  SECURITY.md  build.rs  flake.nix  package.nix  result
.claude/: settings.json
.claude/agents/: cheni-code-reviewer.md  cheni-flake-maintainer.md  cheni-nix-integration.md  cheni-release-manager.md  cheni-repology-debugger.md  cheni-security-auditor.md  cheni-test-author.md  cheni-upstream-merger.md
.github/workflows/: changelog.yaml  release.yml
crates/nh/: Cargo.toml  build.rs
crates/nh-core/src/: command.rs  lib.rs  util.rs
crates/nh-nixos/: Cargo.toml
crates/nh-nixos/src/: args.rs  bug_report.rs  check.rs  cheni_meta.rs  cheni_util.rs  doctor.rs  error_clarify.rs  events.rs  freezes.rs  lib.rs  nixos.rs  pins.rs  self_update.rs  timeline.rs  version_cache.rs  versioning.rs
crates/nh/src/: interface.rs  main.rs
docs/superpowers/plans/: 2026-04-28-cheni-audit.md  2026-04-28-cheni-clean-extension.md  2026-04-28-cheni-gc.md  2026-04-28-quitter-repology.md  2026-07-14-nix-error-comprehension-v2.1.md  (+3 more)
public-keys/: README.md  cheni-release.pub
scripts/: check.sh  install-hooks.sh
scripts/hooks/: cc_post_edit.sh  cc_session_start.sh  cc_stop.sh  pre-push
src/: api.rs  app.rs  http.rs  lib.rs  main.rs  pins.rs  release.rs  store.rs  types.rs  ui.rs  util.rs
src/api/: cache.rs  mod.rs  net.rs  repology.rs
src/cmd/: audit.rs  bug_report.rs  build.rs  check.rs  clean.rs  diagnose.rs  diff.rs  doctor.rs  freeze.rs  gc.rs  history.rs  init.rs  interactive.rs  lifecycle.rs  mod.rs  obsolete.rs  pin.rs  preview.rs  rollback.rs  search.rs  self_update.rs  snapshot.rs  status.rs  timeline.rs  unfreeze.rs  update.rs  upgrade.rs  verify.rs  why.rs
src/nix/: config.rs  eval.rs  flake.rs  freezes.rs  gc.rs  git.rs  mod.rs  pins.rs  store.rs  timeline.rs  tools.rs  version_cache.rs
src/output/: mod.rs  prettify.rs  stream.rs
src/tests/: http.rs  release.rs  util.rs
src/version/: compare.rs  mod.rs  parse.rs
tests/: smoke.rs
(+65 files in other folders)
