[package]
name = "cheni"
version = "0.5.1"
edition = "2021"
description = "Granular package updates for NixOS"
license = "MIT"
repository = "https://gitlab.com/harrael/cheni"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Logging / Debug
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Output
colored = "3"

# Interactive prompts (used by `cheni` with no subcommand)
dialoguer = { version = "0.11", default-features = false }

# Terminal size detection (re-exported from a transitive dep, used to wrap
# the `cheni history` summary line cleanly)
terminal_size = "0.4"

# Utilities
regex = "1"
anyhow = "1"
dirs = "6"

# Release verification: minisign signature check for `cheni self-update`.
# Pure-Rust crate, no FFI, no external `minisign` binary needed at runtime.
minisign-verify = "0.2"

# Merged stdout+stderr piping for `cheni upgrade` / `cheni build` /
# `cheni self-update`. Lets us stream nh output live through a single
# pipe, preserving emission order naturally (no select! on two streams).
os_pipe = "1"

# CLI utilities (clap_mangen for man-page generation in `cheni man`)
[dependencies.clap_mangen]
version = "0.2"

[dev-dependencies]
tempfile = "3"
